Secrets don't work like I thought they did

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>`$${{secrets.MessageAccessKey_step1 }}`</title>
+    <title>Five Years, Today</title>
     <style>
         body {
             font-family: Georgia, 'Times New Roman', serif;
@@ -12,14 +12,14 @@
             line-height: 1.8;
             margin: 0;
             padding: 0;
-            background-color: #b5d0e7; 
+            background-image: radial-gradient(circle at bottom right, #6e2ada, #b5d0e7); ; 
         }
         
         .container {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-image: radial-gradient(circle at top left, #f2d2e9, #b5d0e7); 
+            background-image: radial-gradient(circle at top left, #f2d2e9, #43a6fc86); 
         }
         
         .container p {
