--- a/index.html
+++ b/index.html
@@ -148,21 +148,20 @@
   </head>
   <body>
     <div class="container">
-      <p>The card that was sent with the flowers only allowed 175 characters for the message. And frnakly, that simply isn't nearly enough characters for everything that I have to say.</p>
-      <p>Because although this isn't a wedding anniversary, it is an important one. </p>
+      <p>The card that was sent with the flowers only allowed 175 characters for the message. And frankly, that simply isn't nearly enough characters for everything that I have to say.</p>
       <p>It's been almost a year since the day we were wed, but today is not the anniversary of that day. </p>
       <p>Today is the anniversary of when we took a leap. Today marks the day when we decided that we wanted to make a commitment. </p>
       <p>We've been through so much since that day. It's been chaotic and joyous, beautiful and wild. It's been everything I could have hoped for and so much more. </p>
       <p>It's been five years, today. </p>
       <p>It's funny to think that we hold this date and it's events in such high regard when, in actuality, things were feeling pretty dicey at the time.</p>
-      <p>I think we had just taken a trip to my hometown together, where I'd left you at my parents house alone while I drove to speak with my ex-girlfriend. </p>
+      <p>I think we had just taken a trip to my hometown together, where I'd left you at my parents' house alone while I drove to speak with my ex-girlfriend. </p>
       <p>And then later, driving back to college, I'd told you that I wasn't ready to be dating, and I needed some time to sort things out. </p>
       <p>But you persisted. I told you that I didn't want a relationship, but you made one. I treated you wrongly, and you were kind, and gentle, and patient in return. </p>
       <p>All of this make for a pitiful getting-together story, but it culminated in a sort of throwing my hands up in the air and saying "Alright, what the heck. Let's do this."</p>
       <p>I still felt unsure of my readiness to commit to a relationship, alongside feelings of guilt about my previous performance in the choppy relationship we'd had earlier in the year. But even so, you accepted me and all my troubles, and we had a remarkable time dating.</p>
       <p>And soon enough all of my uncertainty melted away, and you became the only thing in the world that I could be 100%, doubtlessly certain of.</p>
       <p>Now it's been five years since that tremulous commitment was made, we've solidified it and declared it for God and the world in marriage, and the good times we had dating continue to sweeten. </p>
-      <p>We aren't the same people that we were back in college, and we aren't the same people that we were when we wed one another nearly a year ago, but ever since that day five years ago today, we change <em>together</em>.    </p>
+      <p>We aren't the same people that we were back in college, and we aren't the same people that we were when we wed one another nearly a year ago, but ever since that day five years ago today, we change together.    </p>
       <p>As we celebrate this special day, I want you to know how much I love you and how grateful I am to have you as my wife. I can't wait to see what the future holds for us and to continue growing and changing together. </p>
       <p>Here's to many more years of love, laughter, and happiness!</p>
       <p>With all of my love, forever and always, <br/> Shane</p>
@@ -214,6 +213,7 @@
             downArrow.classList.remove("inverted");
           }
         });
+        
       });
     </script>
   </body>
