--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <p>I think we had just taken a trip to my hometown together, where I'd left you at my parents' house alone while I drove to speak with my ex-girlfriend. </p>
       <p>And then later, driving back to college, I'd told you that I wasn't ready to be dating, and I needed some time to sort things out. </p>
       <p>But you persisted. I told you that I didn't want a relationship, but you made one. I treated you wrongly, and you were kind, and gentle, and patient in return. </p>
-      <p>All of this make for a pitiful getting-together story, but it culminated in a sort of throwing my hands up in the air and saying "Alright, what the heck. Let's do this."</p>
+      <p>All of this makes for a pitiful getting-together story, but it culminated in a sort of throwing my hands up in the air and saying "Alright, what the heck. Let's do this."</p>
       <p>I still felt unsure of my readiness to commit to a relationship, alongside feelings of guilt about my previous performance in the choppy relationship we'd had earlier in the year. But even so, you accepted me and all my troubles, and we had a remarkable time dating.</p>
       <p>And soon enough all of my uncertainty melted away, and you became the only thing in the world that I could be 100%, doubtlessly certain of.</p>
       <p>Now it's been five years since that tremulous commitment was made, we've solidified it and declared it for God and the world in marriage, and the good times we had dating continue to sweeten. </p>
