--- a/index.html
+++ b/index.html
@@ -117,6 +117,38 @@
             transform: translate(-50%, 0);
           }
         }
+        @keyframes invertAnimation {
+          0% {
+            transform: scaleY(1) translateX(-50%);
+          }
+          100% {
+            transform: scaleY(-1) translateX(-50%);
+          }
+        }
+        @-o-keyframes invertAnimation {
+          0% {
+            transform: scaleY(1) translateX(-50%);
+          }
+          100% {
+            transform: scaleY(-1) translateX(-50%);
+          }
+        }
+        @-moz-keyframes invertAnimation {
+          0% {
+            transform: scaleY(1) translateX(-50%);
+          }
+          100% {
+            transform: scaleY(-1) translateX(-50%);
+          }
+        }
+        @-webkit-keyframes invertAnimation {
+          0% {
+            transform: scaleY(1) translateX(-50%);
+          }
+          100% {
+            transform: scaleY(-1) translateX(-50%);
+          }
+        }
 
         /* Add down arrow */
         .down-arrow {
@@ -136,11 +168,10 @@
         }
 
         .down-arrow.inverted {
-          transform: scaleY(-1) translateX(-50%);
-          -webkit-animation: none;
-          -moz-animation: none;
-          -o-animation: none;
-          animation: none;
+          -webkit-animation: invertAnimation .5s 1 forwards;
+          -moz-animation: invertAnimation .5s 1 forwards;
+          -o-animation: invertAnimation .5s 1 forwards;
+          animation: invertAnimation .5s 1 forwards;
         }
       }
     </style>
